@@ -48,3 +48,7 @@ assets = [
 ]
 post_install_script = "debian/postinst"
 post_uninstall_script = "debian/postrm"
+
+# Required by `cross` tool for glibc 2.17 CentOS-compatible cross-compilation
+[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
+image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main-centos"
